object id company umesto object name

--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -43,5 +43,5 @@
   </mat-paginator>
 
   <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No feedbacks</mat-toolbar>
-  <button mat-stroked-button color="primary" class="mat-btn" [routerLink]="['/resolvedFeebacks/', objectName]">Show Resolved</button>
+  <button mat-stroked-button color="primary" class="mat-btn" [routerLink]="['/resolvedFeebacks/', objectIdCompany]">Show Resolved</button>
 </div>
