--- a/src/app/dialogs/email-dialog/email-dialog.component.html
+++ b/src/app/dialogs/email-dialog/email-dialog.component.html
@@ -2,7 +2,7 @@
     <h3 mat-dialog-title>Send store check to:</h3>
 
     <form class="mat-dialog-content" #formControl="ngForm">
-        <div class="form">
+        <!-- <div class="form">
             <mat-checkbox color="primary" [checked]="emailsForSending.generalDirector" name="generalDirector" (change)="onSelectionChanged($event, 'generalDirector')">General director</mat-checkbox>
         </div>
         <div class="form">
@@ -16,7 +16,7 @@
         </div>
         <div class="form">
             <mat-checkbox color="primary" [(ngModel)]="emailsForSending.marketing" name="marketing" (change)="onSelectionChanged($event, 'marketing')">Marketing</mat-checkbox>
-        </div>
+        </div> -->
         <div class="form">
             <mat-checkbox color="primary" [(ngModel)]="emailsForSending.allUsers" name="allUsers" (change)="onSelectionChanged($event, 'allUsers')">All users</mat-checkbox>
         </div>
