--- a/src/app/components/retailer/retailer.component.html
+++ b/src/app/components/retailer/retailer.component.html
@@ -15,7 +15,7 @@
 
   <ng-container matColumnDef="planogramPdf">
     <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">Planogram</mat-header-cell>
-    <mat-cell *matCellDef="let row"><button mat-icon-button color="primary"(click)="openPlanogramDialog(row.retailerName)">Show planograms
+    <mat-cell *matCellDef="let row"><button mat-icon-button color="primary"(click)="openPlanogramDialog(row.retailerName)">Preview
             </button></mat-cell>
   </ng-container>
 
