--- a/src/app/dialogs/position-dialog/position-dialog.component.css
+++ b/src/app/dialogs/position-dialog/position-dialog.component.css
@@ -37,3 +37,16 @@ button[disabled]:hover {
     overflow-y: hidden;
     padding-bottom: 10px;
 }
+
+::ng-deep .redNoMatch
+{
+    color: #fff;
+    background-color: #39ace7 !important;
+}
+
+button {
+    outline: none;
+}
+::ng-deep .mat-button-focus-overlay {
+    display: none;
+}
