--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
@@ -50,6 +50,9 @@
     <div *ngIf="imageUploaded">
       <p>Photo is uploaded.</p>
     </div>
+    <div *ngIf="submitClicked && !imageUploaded">
+      <p style="color:red">Photo must be uploaded.</p>
+    </div>
     <div mat-dialog-actions class="wrap">
             <div *ngIf="isLoading"
             style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
