prikaz kategorija na admin stranici

--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -50,6 +50,16 @@
   </div>
 
   <div class="fadeIn third">
+    <h2 class="heading">Feedback Categories</h2>
+    <app-feedback-category></app-feedback-category>
+  </div>
+
+  <div class="fadeIn third">
+    <h2 class="heading">Product Categories</h2>
+    <app-product-category></app-product-category>
+  </div>
+
+  <div class="fadeIn third">
     <h2 class="heading">Store Check Receivers</h2>
     <app-store-check-receiver></app-store-check-receiver>
   </div>
