--- a/src/app/components/store-check-receiver/store-check-receiver.component.html
+++ b/src/app/components/store-check-receiver/store-check-receiver.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mat-elevation-z8">
     <table class="mat-table table">
         <tr class="mat-header-row header">
             <th class="mat-header-cell header-item">Receiver</th>
