--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -61,6 +61,30 @@
                         </mat-card-title>
                     </mat-card>
                 </mat-grid-tile>
+                <mat-grid-tile class="test-grid-title" colspan="2" rowspan="2">
+                  <mat-card>
+                      <mat-card-title>Top 3 Users by Feedbacks</mat-card-title>
+                      <mat-card-content>
+                          <pie-chart></pie-chart>
+                      </mat-card-content>
+                  </mat-card>
+              </mat-grid-tile>
+              <mat-grid-tile class="test-grid-title" colspan="2" rowspan="2">
+                <mat-card>
+                    <mat-card-title>Top 3 Resolvers by Feedbacks</mat-card-title>
+                    <mat-card-content>
+                        <pie-chart2></pie-chart2>
+                    </mat-card-content>
+                </mat-card>
+            </mat-grid-tile>
+            <mat-grid-tile class="test-grid-title" colspan="2" rowspan="2">
+              <mat-card>
+                  <mat-card-title>Top 3 Objects by Feedbacks</mat-card-title>
+                  <mat-card-content>
+                      <pie-chart3></pie-chart3>
+                  </mat-card-content>
+              </mat-card>
+          </mat-grid-tile>
             </mat-grid-list>
 
 
