--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -10,7 +10,7 @@
     </mat-form-field>
 
   </div> -->
-    <div class="detail-search">
+    <div class="detail-search" *ngIf="!isDashboard">
 
       <!-- <div class="detail-search-menu" *ngIf="detailSearch"> -->
       <div class="detail-search-menu">
@@ -113,9 +113,9 @@
           </mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"></mat-row>
+        <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns" (click)="selectObject(row.objectName)"></mat-row>
       </mat-table>
-      <mat-paginator *ngIf="length > 0" [pageIndex]="page-1" [pageSizeOptions]="[5, 10, 25, 100]" [length]="length"
+      <mat-paginator *ngIf="length > 0" [pageIndex]="page-1" [pageSizeOptions]="[2, 5, 10, 25, 100]" [length]="length"
         (page)="loadDataOnPageEvent($event)">
       </mat-paginator>
     </div>
