--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -60,7 +60,7 @@
         </mat-cell>
       </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"></mat-row>
+      <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns" (click)="selectUser(row.username)"></mat-row>
     </mat-table>
     <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white;">
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate">
