--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -57,7 +57,7 @@
 
 .filter-section {
     width: 100%;
-    margin: 20px auto 0 auto;
+    margin: 0 auto;
 }
 
 .filter-section-item {
@@ -72,11 +72,12 @@
 .table-section {
     width: 100%;
     display: flex;
+    justify-content: center;
 }
 
 .table-section-item {
     margin-top: 50px;
-    width: 25%;
+    width: 30%;
 }
 
 .month-section {
