--- a/src/app/components/object/object.component.css
+++ b/src/app/components/object/object.component.css
@@ -29,11 +29,6 @@ h4 {
   text-align: center;
 }
 
-.adr-name-search {
-  padding-top: 20px;
-}
-
-
 .detail-search {
   margin-top: 20px;
 }
@@ -100,61 +95,7 @@ h4 {
   color: #56baed;
 }
 
-.mat-column-objectName {
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 18% !important;
-  width: 18% !important;
-  overflow-wrap: break-word;
 
-
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-
-  text-align: center;
-  margin-left: -17px;
-}
-
-.mat-column-address {
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 30% !important;
-  width: 30% !important;
-  overflow-wrap: break-word;
-
-
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-
-  text-align: center;
-}
-
-.mat-column-actions {
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  /* flex: 0 0 50% !important; */
-  width: 50% !important;
-  overflow-wrap: break-word;
-
-
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-
-  text-align: left;
-
-}
 
 /* @media (max-width: 300px) {
   .mat-column-actions{
@@ -200,7 +141,7 @@ h4 {
 }
 
 mat-header-row {
-  margin-left: 17px;
+  /* margin-left: 17px; */
 }
 
 .container {
@@ -221,4 +162,71 @@ mat-header-row {
   margin: 10px 0;
   font-size: 15px;
   padding: 5px;
+}
+
+.column-name {
+  font-size: 16px;
+}
+
+@media screen and (max-width: 960px) {
+  .mat-table {
+    border: 0;
+    vertical-align: middle
+  }
+
+  .mat-table caption {
+    font-size: 1em;
+  }
+
+  /* Enable this to hide header */
+  .mat-table .mat-header-cell {
+    border: 10px solid;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+  
+  .mat-table .mat-row {
+    border-bottom: 5px solid #ddd;
+    display: block;
+  }
+
+  /*
+  .mat-table .mat-row:nth-child(even) {background: #CCC}
+  .mat-table .mat-row:nth-child(odd) {background: #FFF}
+  */
+  .mat-table .mat-cell {
+    border-bottom: 1px solid #ddd;
+    display: block;
+    font-size: 1em;
+    text-align: right;
+    font-weight: bold;
+    height: 30px;
+    margin-bottom: 4%;
+    padding: 0 10px;
+  }
+
+  .mat-table .mat-cell:before {
+    /*
+    * aria-label has no advantage, it won't be read inside a table
+    content: attr(aria-label);
+    */
+    content: attr(data-label);
+    float: left;
+    text-transform: uppercase;
+    font-weight: normal;
+
+    font-size: .85em;
+  }
+
+  .mat-table .mat-cell:last-child {
+    border-bottom: 0;
+  }
+
+  .mat-table .mat-cell:first-child {
+    margin-top: 4%;
+  }
 }
