--- a/src/app/components/user/user.component.css
+++ b/src/app/components/user/user.component.css
@@ -1,4 +1,3 @@
-
 .font {
   padding: 0 20px;
   font-family: sans-serif;
@@ -8,23 +7,30 @@
   background: #56baed;
 }
 
-.centered{
-  text-align:center;
+.centered {
+  text-align: center;
 }
-.search{
-  color:white;
-  background-color:#56baed;
+
+.search {
+  color: white;
+  background-color: #56baed;
   margin: 2%;
 
 }
-.noDataMessage{
-  background-color: white;
-  color:#56baed;
- }
 
-.mat-spinner-color::ng-deep circle{
+.noDataMessage {
+  background-color: white;
+  color: #56baed;
+}
+
+.column-name {
+  font-size: 16px;
+}
+
+.mat-spinner-color::ng-deep circle {
   stroke: #56baed !important;
-  }
-.whitetext{
-  color:white;
+}
+
+.whitetext {
+  color: white;
 }
