--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,9 +1,9 @@
 <div class="font">
-  <div class="centered" *ngIf="!isDashboard">
+  <div class="centered">
     <mat-form-field>
 
-      <input type="text" matInput placeholder="Search" [(ngModel)]="search">
-      <button matSuffix mat-button class="search" (click)="searchByUsername()">
+      <input type="text" matInput placeholder="Search users" [(ngModel)]="search">
+      <button matSuffix mat-button class="search" (click)="loadData()">
         <mat-icon class="search">search</mat-icon>
       </button>
 
@@ -14,30 +14,30 @@
     <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
 
       <ng-container matColumnDef="firstName">
-        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">First name</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">First name</mat-header-cell>
         <mat-cell *matCellDef="let row">{{ row.firstName }}</mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="lastName">
-        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">Last name</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Last name</mat-header-cell>
         <mat-cell *matCellDef="let row">{{ row.lastName }}</mat-cell>
       </ng-container>
 
 
       <ng-container matColumnDef="username">
-        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">Username</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">{{ isDashboard ? "Users" : "Username" }}</mat-header-cell>
         <mat-cell *matCellDef="let row">{{ row.username }}</mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="email">
-        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">Email</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Email</mat-header-cell>
         <mat-cell *matCellDef="let row">{{ row.email }}</mat-cell>
       </ng-container>
 
 
 
       <ng-container matColumnDef="userType">
-        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">User type</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">User type</mat-header-cell>
         <mat-cell *matCellDef="let row">{{ row.userType }}</mat-cell>
       </ng-container>
 
@@ -66,7 +66,9 @@
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate">
       </mat-progress-spinner>
     </div>
-
+    <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No users</mat-toolbar>
+    <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [pageSizeOptions]="[2, 5, 10, 25, 100]" [length]="length"
+    (page)="loadDataOnPageEvent($event)">
+  </mat-paginator>
   </div>
-  <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No users</mat-toolbar>
 </div>
