--- a/src/app/charts/pie-chart/pie-chart.component.html
+++ b/src/app/charts/pie-chart/pie-chart.component.html
@@ -2,11 +2,12 @@
   <ngx-charts-pie-chart
   [view]="view"
   [scheme]="colorScheme"
-  [results]="single"
+  [results]="data"
   [gradient]="gradient"
   [legend]="showLegend"
   [labels]="showLabels"
   [doughnut]="isDoughnut"
+  [trimLabels]="trimLabels"
   (select)="onSelect($event)"
   (activate)="onActivate($event)"
   (deactivate)="onDeactivate($event)"
