--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
 <div class="dashboard" *ngIf="flag === 1">
 
     <div class="filter-section">
-        <button mat-stroked-button class="filter-section-item" *ngIf="selectedRetailer" (click)="selectRetailer('')">{{
-            selectedRetailer }} <mat-icon>close</mat-icon></button>
         <button mat-stroked-button class="filter-section-item" *ngIf="selectedUser" (click)="selectUser('')">{{
             selectedUser }} <mat-icon>close</mat-icon></button>
+        <button mat-stroked-button class="filter-section-item" *ngIf="selectedRetailer" (click)="selectRetailer('')">{{
+            selectedRetailer }} <mat-icon>close</mat-icon></button>
         <button mat-stroked-button class="filter-section-item" *ngIf="selectedObject" (click)="selectObject('')">{{
             selectedObject }} <mat-icon>close</mat-icon></button>
         <button mat-stroked-button class="filter-section-item" *ngIf="selectedMonth" (click)="selectMonth('')">{{
@@ -50,13 +50,13 @@
             <mat-card>
                 <mat-card-title>Product categories</mat-card-title>
                 <mat-card-title>
-                    <app-advanced-pie-chart [data]="productCategoryResult" *ngIf="productCategoryResult">
-                    </app-advanced-pie-chart>
+                    <pie-chart [data]="productCategoryResult" *ngIf="productCategoryResult"></pie-chart>
                 </mat-card-title>
             </mat-card>
         </mat-grid-tile>
     </mat-grid-list>
 
     <app-advanced-pie-chart [data]="productCategoryResult" *ngIf="productCategoryResult"></app-advanced-pie-chart>
-    
+    <pie-chart [data]="productCategoryResult" *ngIf="productCategoryResult"></pie-chart>
+
 </div>
