--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -12,6 +12,7 @@
     </div>
 
     <button (click)="send()"> send</button>
+
     <div class="table-section">
         <div class="table-section-item">
             <app-user [isDashboard]="true" (selectedUser)="selectUser($event)"></app-user>
@@ -24,10 +25,46 @@
         </div>
     </div>
 
+    <!--
     <div class="month-section">
         <button mat-stroked-button [class]="selectedMonth === month ? 'selected-month-btn' : 'month-btn'"
             *ngFor="let month of months" (click)="selectMonth(month)">{{ month }}</button>
-    </div>
+    </div> -->
+<div class="centered div-container">
+  <div class="div-element">
+<mat-form-field appearance="fill">
+  <mat-label>Year</mat-label>
+  <mat-select (selectionChange)="setYear($event)">
+    <mat-option *ngFor="let year of years" [value]="year">
+      {{year}}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+</div>
+
+<div class="div-element">
+<mat-form-field appearance="fill">
+  <mat-label>Month</mat-label>
+  <mat-select (selectionChange)="setMonth($event.value)">
+    <mat-option *ngFor="let month of months" [value]="month">
+      {{month}}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+</div>
+
+<div class="div-element">
+<mat-form-field appearance="fill">
+  <mat-label>Day</mat-label>
+  <mat-select (selectionChange)="setDay($event)">
+    <mat-option *ngFor="let day of days2" [value]="day">
+      {{day}}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+</div>
+</div>
+
 
     <mat-grid-list rowHeight="220px" [cols]="breakpoint" (window:resize)="onResize($event)">
         <mat-grid-tile class="test-grid-title" [colspan]="breakpoint">
