--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -28,12 +28,6 @@
     display: flex;
 }
 
-.card {
-    max-width: 100%;
-    max-height: 100%;
-    /* height: 500px; */
-}
-
 .grid-title {
     /* background-color: red; */
 }
@@ -67,6 +61,21 @@
     color: #56baed;
     width: auto;
     margin: 10px;
+}
+
+.send-btn {
+    border: 2px solid #56baed;
+    border-radius: 100px;
+    background-color: #56baed;
+    color: #fff;
+    width: 100px;
+    margin: 10px;
+}
+
+.send-btn:hover {
+    background-color: #fff;
+    color: #56baed;
+    transition: 0.3s;
 }
 
 .table-section {
