--- a/src/app/components/retailer/retailer.component.html
+++ b/src/app/components/retailer/retailer.component.html
@@ -8,7 +8,7 @@
 </div>
 <div class="container mat-elevation-z8">
 
-  <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
+  <mat-table mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
 
     <ng-container matColumnDef="retailerName">
       <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">{{ isDashboard ? "Retailers" : "Name" }}</mat-header-cell>
