--- a/src/app/components/sidenav/sidenav.component.css
+++ b/src/app/components/sidenav/sidenav.component.css
@@ -12,8 +12,8 @@
 }
 
 .sidenav-container {
-    position: absolute;
-    top: 60px;
+    position: relative;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
@@ -25,7 +25,7 @@
 }
 
 .sidenav-content {
-    padding-top: 30px;
+    padding: 30px 0;
 }
 
 .nav-list-item {
